On branch main Changes to be committed: 	modified:   README Untracked files: 	.gitignore

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Initial project version
+This project contains a Node.JS server to be run in "Node 4 Max". Node serves a webpage over the local network, and the webpage receives IMU values from a mobile phone and sends the values to Max via websockets.
